css/dpf.css
/*
    Base CSS for DPF js
    Bruno Fanini (bruno.fanini++AT++gmail.com)

====================================================================*/

html,
body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
}

body {
    overflow: hidden;

    font-family: sans-serif;
    font-size: 14px;
    font-family: Tahoma, Verdana, Geneva;
}

a {
    color: #cccccc;
    text-decoration: underline;
}

canvas {
    display: block; /* Fix middle button drag on FF */
    height: 100%;
    width: 100%;

    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -o-user-select: none;
    user-select: none;
/*
    -webkit-filter: blur(2px);
    -moz-filter: blur(2px);
    -ms-filter: blur(2px);
    -o-filter: blur(2px);
    filter: blur(2px);
*/
}

.view3D {
    position: absolute;
    width: 100%;
    height: 100%;
}

.title {
    padding: 6px;
    display: block;

    text-align: right;
    font-size: 24px;
    font-weight: bold;

    background: rgba(255,255,255,0.1);
}

@media (max-width: 600px){
    .title {
        font-size: 14px;
    }
}

.sampleBlock {
    display: inline-block;
    padding: 10px;
    margin: 5px;
    text-align: center;

    border-radius: 16px;

    background: rgba(255,255,255,0.2);
}

.sampleText {
    text-align: justify;
    font-size: 16px;
    padding: 5px;
}

@media (max-width: 600px){
    .sampleText {
        font-size: 10px;
    }
}


.sampleBlock img {
    border-radius: 16px;
}

.code {
    font-family: courier;
    color: #aaaacc;
    padding-left: 5px;
    padding-right: 5px;
    background: rgba(0,0,0,0.5);
    display: inline;
    white-space: nowrap !important;
}

.dark-bg {
    color: #FFF;
    background: rgba(0,0,0, 1.0);
}

.infoContainer {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    /*box-sizing: border-box;*/
    padding: 0px 0px 0px 0px;

    text-align: center;

    z-index: 2;
    margin: 0px 0px 0px 0px;

    /*pointer-events: none;*/

    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -o-user-select: none;
    user-select: none;

    overflow: hidden;
}

.description {
    /*font-size: 12px;*/

    display: block;
    padding: 5px 5px 5px 5px;
    /*border-radius: 15px;*/
    margin: 0px 0px 0px 0px;

    text-align: left;

    background: rgba(0,0,0, 0.5);

    /*pointer-events: auto;*/
}

.description::after {
  /* Prefix free isn't picking up this one */
  -webkit-filter: url('#blur');
  filter: url('#blur');
  -webkit-filter: blur(5px);
  filter: blur(5px);
}

